# bevy-match-3

./: Cargo.toml  README.md
src/: audio.rs  board.rs  game_logic.rs  gems.rs  in_game_ui.rs  main.rs  menu.rs
workshop/advanced/: 1-gem-sprites.md  2-special-gems.md  3-shuffle-when-stuck.md  4-particle-effects.md  5-hint-system.md  6-game-ai.md
workshop/beginner/: 1-new-gem-colour.md  2-bonus-points-for-large-clears.md  3-move-counter.md  4-high-score.md  5-background.md  6-angry-wiggles.md  7-new-font.md
